# scalar_field_sim

./: CMakeLists.txt  package.xml  pyproject.toml  readme.md
config/: rviz.rviz
launch/: field_sim.launch.py  top_field_sim_stack.launch.py
nodes/: field_server_node.py  field_visualization_node.py  ir_measurement_sim_node.py  periodic_measurement_trigger_node.py
scalar_field_sim/: config.py  config_loading.py  field.py  geometry.py  markers.py  pointcloud.py
scenarios/: simple_field_1.toml
scripts/: test_call_field.py
