# Copyright (C) 2026 Nathalie Bauschmann

# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,
# USA

cmake_minimum_required(VERSION 3.5)
project(scalar_field_sim)
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
endif()

# needed for clang-tidy to work
if(CMAKE_EXPORT_COMPILE_COMMANDS)
    set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
endif()

set(CXX_FLAGS -Wall -Wextra -Wpedantic -Wshadow -std=c++17 -O2)
add_compile_options(${CXX_FLAGS})

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)

find_package(rclpy REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(scalar_field_interfaces REQUIRED)

# include_directories(include)

# Install Python modules
ament_python_install_package(${PROJECT_NAME})

# ################################################################################
# # obstacle node
# ################################################################################
# add_executable(obstacle_node src/obstacle/obstacle_node.cpp)
# ament_target_dependencies(obstacle_node
#   rclcpp
#   hippo_common
#   std_msgs
#   geometry_msgs
#   yaml-cpp
#   ament_index_cpp
# )
# install(
#   TARGETS obstacle_node
#   DESTINATION lib/${PROJECT_NAME}
# )



# Install Python executables
install(PROGRAMS
  nodes/field_server_node.py
  nodes/field_visualization_node.py
  DESTINATION lib/${PROJECT_NAME}
)

install(
  DIRECTORY launch scenarios
  DESTINATION share/${PROJECT_NAME}
)


ament_package()
